--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <p><small>Photo courtesy of <a href="https://marco-tranzatto.github.io/">Marco Tranzatto</a>.</small></p>
         </div>
         <div class="intro_text">
-          <p>Hey, I'm Helen, and I'm currently a Senior Scientist at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland, working on the combination of Mixed Reality and robotics.</p>
+          <p>Hey, I'm Helen, and I'm currently a Senior Researcher at the  <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>.
+          <p>Previously I worked as a Senior Software Engineer on the Isaac 3D Perception team at <a href="https://developer.nvidia.com/isaac-ros">Nvidia</a>, and before that, as a Senior Scientist at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland.</p>
           <p>I finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019 with Prof. Roland Siegwart. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.
           I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
@@ -38,6 +39,10 @@
 
       <h2>Journal</h2>
       <div class="pub_list">
+       <p>Alexander Millane, Helen Oleynikova, Christian Lanegger, Jeff Delmerico, Juan Nieto, Roland Siegwart, Marc Pollefeys, and Cesar Cadena, “<b>Freetures: Localization in Signed Distance Function Maps</b>”. <i>IEEE Robotics and Automation Letters</i>, 2021.<br>
+        [<a href="https://arxiv.org/pdf/2010.09378.pdf">pdf</a> | <a href="publications/ral_2021_freetures_bibtex.txt">bibtex</a>]
+      </p>
+        
       <p>Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
         [<a href="publications/jfr_2020_system.pdf">pdf</a> | <a href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
       </p>
