--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <h1>Helen Oleynikova</h1>
       <div class="intro">
         <div class="portrait">
-          <img src="images/lake_small.jpg">
-          <p><small>Photo courtesy of <a href="https://marco-tranzatto.github.io/">Marco Tranzatto</a>.</small></p>
+          <img src="images/portrait_small.jpg">
         </div>
         <div class="intro_text">
           <p>Hey, I'm Helen, and I'm currently a Senior Researcher at the  <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>.
