Add newest publications.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div class="intro_text">
           <p>Hey, I'm Helen, and I'm currently a Senior Researcher at the  <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>.
           <p>Previously I worked as a Senior Software Engineer on the Isaac 3D Perception team at <a href="https://developer.nvidia.com/isaac-ros">Nvidia</a>, and before that, as a Senior Scientist at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland.</p>
-          <p>I finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019 with Prof. Roland Siegwart. My research focuses on online collision avoidance for rotary-wing UAVs and mapping for planning from vision-based sensors.
-          I finished a Masters in Robotics, Systems, and Control in 2015, also at <a href="http://www.ethz.ch">ETH</a>.</p>
+          <p>I finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019 with Prof. Roland Siegwart, after completing a Masters with the same group.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
           <p>I finished my Bachelor at <a href="http://www.olin.edu">Olin College of Engineering</a> in 2011, also studying Robotics.</p>
           <p>[<a href="mailto:helen.oleynikova@gmail.com">helen.oleynikova@gmail.com</a> | <a href="https://github.com/helenol">github</a> | <a href="https://scholar.google.com/citations?user=aeJGZxIAAAAJ">google scholar</a>]</p>
@@ -41,7 +40,7 @@
        <p>Alexander Millane, Helen Oleynikova, Christian Lanegger, Jeff Delmerico, Juan Nieto, Roland Siegwart, Marc Pollefeys, and Cesar Cadena, “<b>Freetures: Localization in Signed Distance Function Maps</b>”. <i>IEEE Robotics and Automation Letters</i>, 2021.<br>
         [<a href="https://arxiv.org/pdf/2010.09378.pdf">pdf</a> | <a href="publications/ral_2021_freetures_bibtex.txt">bibtex</a>]
       </p>
-        
+
       <p>Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
         [<a href="publications/jfr_2020_system.pdf">pdf</a> | <a href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
       </p>
@@ -59,15 +58,21 @@ using Signed Distance Function Submaps</b>”. In <i>IEEE Robotics and Automatio
         [<a href="http://link.springer.com/article/10.1007/s10514-016-9610-0">publisher page</a> | <a href="publications/ar_2016_exploration_bibtex.txt">bibtex</a>]</p>
       </div>
 
-
-
       <h2>Conference</h2>
       <div class="pub_list">
+      <p>Patrick Pfreundschuh, Helen Oleynikova, Cesar Cadena, Roland Siegwart, Olov Andersson, “<b>COIN-LIO: Complementary Intensity-Augmented LiDAR Inertial Odometry
+      </b>”. In <b>Submission To</b> <i>IEEE Int. Conf. on Robotics and Automation (ICRA)</i>, 2024.<br>
+        [<a href="https://arxiv.org/pdf/2310.01235.pdf">pdf</a> | <a href="publications/arxiv_2023_coinlio_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/2310.01235">arxiv</a>]
+      </p>
+
+      <p>Balakumar Sundaralingam, Siva Kumar Sastry Hari, Adam Fishman, Caelan Garrett, Karl Van Wyk, Valts Blukis, Alexander Millane, Helen Oleynikova, Ankur Handa, Fabio Ramos, Nathan Ratliff, Dieter Fox. “<b>CuRobo: Parallelized Collision-Free Robot Motion Generation</b>”. In <i>IEEE Int. Conf. on Robotics and Automation (ICRA)</i>, May 2023.<br>
+        [<a href="https://arxiv.org/pdf/2310.17274.pdf">pdf</a> | <a href="publications/icra_2023_curobo_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/2310.17274">arxiv</a>]
+      </p>
+
       <p>Alexander Millane, Helen Oleynikova, Juan Nieto, Roland Siegwart, Cesar Cadena. “<b>Free-Space Features: Global Localization in 2D Laser SLAM Using
 Distance Function Maps</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, November 2019.<br>
         [<a href="publications/iros_2019_freespace.pdf">pdf</a> | <a href="publications/iros_2019_freespace_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/1908.01863">arxiv</a>]
       </p>
-
 
       <p>Helen Oleynikova, Zachary Taylor, Roland Siegwart, and Juan Nieto, “<b>Sparse 3D Topological Graphs for Micro-Aerial Vehicle Planning</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and Systems (IROS)</i>, October 2018.<br>
         [<a href="publications/iros_2018_skeleton.pdf">pdf</a> | <a href="publications/iros_2018_skeleton_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=U_6rk-SF0Nw">video</a> | <a href="https://arxiv.org/abs/1803.04345">arxiv</a>]
@@ -108,8 +113,11 @@ Distance Function Maps</b>”. In <i>IEEE Int. Conf. on Intelligent Robots and S
           [<a href="publications/oceans_2010_perimeter_patrol.pdf">pdf</a> | <a href="publications/oceans_2010_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=pTDT7HkfwJM">video</a>]</p>
       </div>
 
-      <h2>Workshop</h2>
+      <h2>Workshop & Magazine</h2>
       <div class="pub_list">
+      <p>Jeffrey Delmerico, Roi Poranne, Federica Bogo, Helen Oleynikova, Eric Vollenweider, Stelian Coros, Juan Nieto, Marc Pollefeys, “<b>Spatial computing and intuitive interaction: Bringing mixed reality and robotics together</b>”. In <i>IEEE Robotics & Automation Magazine</i>, 2022.<br>
+        [<a href="https://arxiv.org/pdf/2202.01493.pdf">pdf</a> | <a href="publications/ram_2022_spatial_bibtex.txt">bibtex</a> | <a href="https://arxiv.org/abs/2202.01493">arxiv</a>]</p>
+
       <p>Helen Oleynikova, Alex Millane, Zachary Taylor, Enric Galceran, Juan Nieto, and Roland Siegwart “<b>Signed Distance Fields: A Natural Representation for Both Mapping and Planning</b>”. In <i>Geometry and Beyond</i>, RSS Workshop, 2016.<br>
         [<a href="publications/rss_2016_workshop.pdf">pdf</a> | <a href="publications/rss_2016_workshop_bibtex.txt">bibtex</a>]</p>
 
