--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Helen Oleynikova</h1>
       <div class="intro">
         <div class="portrait">
-          <img src="images/portrait_small.jpg">
+          <img src="images/portrait_small2.jpg">
         </div>
         <div class="intro_text">
           <p>Hey, I'm Helen, and I'm currently a Senior Researcher at the  <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>.
