--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="images/portrait_small2.jpg">
         </div>
         <div class="intro_text">
-          <p>Hey, I'm Helen, and I'm currently a Senior Researcher at the  <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>.
+          <p>Hey, I'm Helen, and I'm currently a Senior Researcher at both the <a href="http://mrl.ethz.ch">Mobile Robotics Lab</a> and the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a>.
           <p>Previously I worked as a Senior Software Engineer on the Isaac 3D Perception team at <a href="https://developer.nvidia.com/isaac-ros">Nvidia</a>, and before that, as a Senior Scientist at the <a href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft Mixed Reality and AI Lab</a> in Zürich, Switzerland.</p>
           <p>I finished a PhD with the rotary wing team at the <a href="http://www.asl.ethz.ch">Autonomous Systems Lab</a> at <a href="http://www.ethz.ch">ETH Zürich</a> in February 2019 with Prof. Roland Siegwart, after completing a Masters with the same group.</p>
           <p>Before that, I worked as a Software Engineer on StreetView at <a href="http://goo.gl/maps/UWCPy">Google</a> for 2 years, where I worked on automatic detection of street numbers and learning for improvement of imagery.</p>
